[gd_scene load_steps=2 format=3 uid="uid://c0j2dviphpgof"]

[ext_resource type="Script" path="res://Scenes/Screens/MultiplayerMenuContainer.gd" id="1_p2ner"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
offset_left = 459.0
offset_top = 215.0
offset_right = 693.0
offset_bottom = 433.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="TitleContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "The Emoji Game"
horizontal_alignment = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MultiplayerMenuContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("1_p2ner")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/MultiplayerMenuContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MultiplayerMenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Multiplayer"
horizontal_alignment = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer/MultiplayerMenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer/MultiplayerMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer/MultiplayerMenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer/MultiplayerMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="AddressEntry" type="LineEdit" parent="CenterContainer/VBoxContainer/MultiplayerMenuContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter address here to join"
alignment = 1
expand_to_text_length = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/MultiplayerMenuContainer/VBoxContainer/JoinButton" to="CenterContainer/VBoxContainer/MultiplayerMenuContainer" method="_on_join_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MultiplayerMenuContainer/VBoxContainer/HostButton" to="CenterContainer/VBoxContainer/MultiplayerMenuContainer" method="_on_host_button_pressed"]
